--- a/styles/components/index.css
+++ b/styles/components/index.css
@@ -110,6 +110,7 @@
   align-items: center;
   background-color: var(--color-amarillo-oro);  
   margin-top: 10px;
+  margin-bottom: 15px;
   padding: 5px;
   margin-left: 5px;
   margin-right: 5px; 
