cambiando los colores

--- a/styles/components/index.css
+++ b/styles/components/index.css
@@ -108,7 +108,7 @@
   display: flex;
   flex-direction: column;
   align-items: center;
-  background-color: var(--color-amarillo-oro);  
+  background-color: var(--color-naranja-oscuro);  
   margin-top: 10px;
   margin-bottom: 15px;
   padding: 5px;
