--- a/styles/components/footer.css
+++ b/styles/components/footer.css
@@ -1,5 +1,5 @@
 footer{
-    background-color: var(--color-azul-marino);
+    background-color: var(--color-marron-grisaceo);
     display: flex;
     align-items: center;
     justify-content: space-around;
