--- a/assets/css/styles.css
+++ b/assets/css/styles.css
@@ -2,7 +2,7 @@
 @import "../../styles/layout/structure.css";
 @import "../../styles/components/header.css";
 @import "../../styles/components/index.css";
-
+@import "../../assets/css/turismo_styles.css";
 body,
 html {
   padding: 0;
