--- a/assets/css/styles.css
+++ b/assets/css/styles.css
@@ -6,10 +6,13 @@
 
 body,
 html {
+  height: 100%;
   padding: 0;
   margin: 0;
   display: flex;
   flex-direction: column;
+  background-color: var(--color-naranja-dorado);
+  z-index: -1;
 }
 
 
