--- a/assets/css/styles.css
+++ b/assets/css/styles.css
@@ -4,6 +4,7 @@
 @import "../../styles/components/footer.css";
 @import "../../styles/components/index.css";
 @import "../../assets/css/turismo_styles.css";
+@import "../../assets/css/acceder_styles.css";
 body,
 html {
   height: 100%;
