copie todo los cambios que vi desde el Repo Adriana a Adriana-con-login

--- a/assets/css/registrar.css
+++ b/assets/css/registrar.css
@@ -1,139 +1,94 @@
 .registrar-contenedor-furmulario {
   display: flex;
   justify-content: center;
-  align-items: center;
-  margin: 20px 0 20 px 0;
-
+}
+.registrar-contenedor-furmulario h2{
+  font-size: 40px;
+  font-weight: bold;
+  text-decoration: underline;
+}
+.registro-formulario{
+  background-color: var(--color-naranja-oscuro);
+  width: 80%;
+  margin: 15px 0 20px 0;
+  border-radius: 10px;
+  text-align: center;
+  
 }
 
-.registro-formulario {
-    background-color: var(--color-naranja-oscuro);
-    padding: 10px;
-    margin-top: 20px ;
-    margin-bottom: 25px;
-    border-radius: 10px;
-    box-shadow: 0 0 10px rgb(0 , 0 , 0 , 1);
-    text-align: center;
-    width: 500px;
-}
-
-
-/* Estiolos de la imagen, el imput de files y del Label de la foto */
 .registrar-foto-perfil{
-    display: flex;
-    flex-direction: column;
-    
-    
+  border: solid 1px black;
+  border-radius: 10px;
+  padding: 1rem 0 1rem 0;
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  
 }
 
-.registrar-foto-perfil img{
-    border-radius: 10px;
+#registrar-foto-actual {
+  max-width: 50%;
+  max-height: 350px;
+  border-radius: 15px;
+  
 }
 
-
-.input-formulario-file{
-    display: none;
-}
-.input-formulario-file-label{
-    border-radius: 10px;
-    background-color: var(--color-azul-marino);
-    padding: 5px;
-    font-weight: bold;
-    font-size: 20px;
+.registrar-foto-perfil label{
+  margin: 1rem 0 1rem 0;
+  padding: 1rem ;
+  max-width: 30%;
+  background-color: aquamarine;
+  border-radius: 10px;
+  font-size: 20px;
+  font-weight: bold;
 }
 
-/* Estilos del los diferenctes inputs de datos */
+.input-formulario-file {
+  display: none;
+}
+
 .input-formulario {
-  position: relative;
-  margin: 15px 0 0 0;
-}
-
-.input-formulario input {
-  color: black;
-  padding: 10px;
-  border: none;
-  border-radius: 4px;
-  outline-color: 2px solid white;
-  background-color: transparent;
-  transition: outline-color 500ms;
-  width: 90%;
-}
-
-.input-formulario input:is(:focus, :valid) {
-    /* outline-color: var(--color-naranja-oscuro); */
-    outline-color: var(--color-azul-marino);
+  display: flex;
+  justify-content: space-evenly;
+  width: 80%;
+  margin: auto;
+  margin-top: 2rem;
+  align-items: center;
 }
 
 .input-formulario label {
-  position: absolute;
-  top: 0;
-  left: 0;
-  color: black;
-  transition: translate 500ms, scale 500ms;
-  translate: 10px 8px;
-  pointer-events: none;
+  font-size: 16px;
+  margin-right: 5px;
+}
+.input-formulario input {
+  font-size: 16px;
+  width: 100%;
+  height: 20px;
+  border-radius: 5px;
+  padding: 0.4rem 0 0.4rem 0; 
+  text-align: center;
   
 }
-/* Formato para las etqiuetas que son del tipo fecha  */
-.label-formularios-fecha{
-    background-color: var(--color-naranja-oscuro);
-}
 
-/* Mover la etiqueta cuando el input tiene foco o valor */
-.input-formulario input:focus + label,
-.input-formulario input:valid + label {
-  padding-inline: 10px;
-  translate: 0px -14px;
-  scale: 0.8;
-  background-color: var(--color-naranja-oscuro);
-  font-size: 20px;
-  border-radius: 10px;
-
-}
-
-/* Estilos del acepto terminos y condiciones */
-.formulario-terminos-condiciones{
-    display: flex;
-    align-items: center;
-
-}
 .formulario-boton-acciones{
-    display: flex;
-    flex-direction: column;
-}
-.formulario-boton-acciones button{
-    margin-bottom: 10px;
-    
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+
 }
 
-
-
-/* PROCESOS PARA LA ANIMACION DE SE ESTA CARGANDO */
-
-.loading-button {
-  cursor: wait;
+.formulario-terminos-condiciones{
+  display: flex;
+  justify-content:flex-start;
+  align-items: center;
+  padding: 1rem;
 }
 
-.loading-button::after {
-  content: '';
-  display: inline-block;
-  width: 12px;
-  height: 12px;
-  border: 2px solid transparent;
-  border-radius: 50%;
-  border-top-color: #fff;
-  animation: spin 1s linear infinite;
-  margin-left: 8px;
+.botones-formularios{
+  width: 40%;
+  margin-bottom: 1rem;
 }
 
-@keyframes spin {
-  to {
-    transform: rotate(360deg);
-  }
+.formulario-boton-acciones a{
+  margin: 1rem
 }
-
-/* Estilo para el cursor de espera */
-.loading-cursor {
-  cursor: wait;
-}
- 
