--- a/assets/css/styles.css
+++ b/assets/css/styles.css
@@ -2,9 +2,13 @@
 @import "../../styles/layout/structure.css";
 @import "../../styles/components/header.css";
 @import "../../styles/components/footer.css";
-@import "../../styles/components/index.css";
-@import "../../assets/css/turismo_styles.css";
+@import "./index.css"; 
+@import "./registrar.css";
+@import "./turismo_styles.css"; 
+@import "./enconstruccion.css";
 @import "../../assets/css/acceder_styles.css";
+
+
 body,
 html {
   height: 100%;
