creo ya estaria todo ahora a ver que anda y que no

--- a/assets/css/styles.css
+++ b/assets/css/styles.css
@@ -6,7 +6,8 @@
 @import "./registrar.css";
 @import "./turismo_styles.css"; 
 @import "./enconstruccion.css";
-@import "../../assets/css/acceder_styles.css";
+@import "./restaurantes.css";
+/* @import "../../assets/css/acceder_styles.css"; */
 
 
 body,
