--- a/assets/css/index.css
+++ b/assets/css/index.css
@@ -1,15 +1,108 @@
 /* Estilos para pantallas grandes (mayores a 992px) */
 @media only screen and (min-width: 992px) {
+  .index-contenedor-buscador {
+    display: flex; /* Convertir el contenedor en un contenedor flex */
+    flex-direction: column; /* Alinear los elementos en columna */
+    justify-content: center; /* Centrar verticalmente los elementos */
+    align-items: center; /* Centrar horizontalmente los elementos */
+    height: 180px; /* Establecer la altura del contenedor para ocupar toda la altura de la ventana */
+    h3 {
+      font-size: 35px;
+      text-shadow: 0 0 5px rgba(255, 255, 255, 0.5); /* Agrega un borde blanco alrededor de las letras */
+    }
+    button {
+      border-radius: 10px;
+      background-color: var(--color-azul-marino);
+      
+    }
+  }
+  #index-formulario-busqueda {
+    display: flex;
+    width: 50%;
+    margin-top: 20px;
+    margin-bottom: 40px;
+    gap: 5px;
+    input {
+      width: 80%;
+      height: 40px;
+      border-radius: 15px;
+      text-align: center;
+    }
+  }
 }
 
 /* Estilos para tabletas (entre 768px y 991px) */
 @media only screen and (min-width: 768px) and (max-width: 991px) {
   /* Agrega tus estilos para tabletas aquí */
+
+  .index-contenedor-buscador {
+    display: flex; /* Convertir el contenedor en un contenedor flex */
+    flex-direction: column; /* Alinear los elementos en columna */
+    justify-content: center; /* Centrar verticalmente los elementos */
+    align-items: center; /* Centrar horizontalmente los elementos */
+    height: 180px; /* Establecer la altura del contenedor para ocupar toda la altura de la ventana */
+    h3 {
+      font-size: 35px;
+      text-shadow: 0 0 5px rgba(255, 255, 255, 0.5); /* Agrega un borde blanco alrededor de las letras */
+    }
+    button {
+      border-radius: 10px;
+      background-color: var(--color-azul-marino);
+      
+    }
+  }
+  #index-formulario-busqueda {
+    display: flex;
+    flex-direction: column;
+    text-align: center;
+    width: 50%;
+    margin-top: 20px;
+    margin-bottom: 40px;
+    gap: 5px;
+    input{
+      width: 100%;
+      height: 40px;
+      border-radius: 15px;
+      text-align: center;
+    }
+    
+  }
 }
 
 /* Estilos para celulares (menores a 767px) */
 @media only screen and (max-width: 767px) {
-  /* Agrega tus estilos para celulares aquí */
+  .index-contenedor-buscador {
+    display: flex; /* Convertir el contenedor en un contenedor flex */
+    flex-direction: column; /* Alinear los elementos en columna */
+    justify-content: center; /* Centrar verticalmente los elementos */
+    align-items: center; /* Centrar horizontalmente los elementos */
+    height: 180px; /* Establecer la altura del contenedor para ocupar toda la altura de la ventana */
+    h3 {
+      font-size: 30px;
+      text-shadow: 0 0 5px rgba(255, 255, 255, 0.5); /* Agrega un borde blanco alrededor de las letras */
+    }
+    button {
+      border-radius: 10px;
+      background-color: var(--color-azul-marino);
+      
+    }
+  }
+  #index-formulario-busqueda {
+    display: flex;
+    flex-direction: column;
+    text-align: center;
+    width: 50%;
+    margin-top: 20px;
+    margin-bottom: 40px;
+    gap: 5px;
+    input{
+      width: 100%;
+      height: 40px;
+      border-radius: 15px;
+      text-align: center;
+    }
+    
+  }
 }
 
 /*
@@ -45,94 +138,59 @@
 */
 .index-main {
   height: auto;
-  
 }
 
-.index-contenedor-buscador {
-    display: flex; /* Convertir el contenedor en un contenedor flex */
-    flex-direction: column; /* Alinear los elementos en columna */
-    justify-content: center; /* Centrar verticalmente los elementos */
-    align-items: center; /* Centrar horizontalmente los elementos */
-    height: 180px; /* Establecer la altura del contenedor para ocupar toda la altura de la ventana */
-    h1{
-        /* font-size: var(--tamano-fuente-24); */
-        font-size: 50px;
-        text-shadow: 0 0 5px rgba(255, 255, 255, 0.5); /* Agrega un borde blanco alrededor de las letras */
-    }
-    h3{
-        font-size: 35px;
-        text-shadow: 0 0 5px rgba(255, 255, 255, 0.5); /* Agrega un borde blanco alrededor de las letras */
-    }
-  }
-  
-  .index-contenedor-fondo {
-    position: absolute;
-    top: 0;
-    left: 0;
-    width: 100%;
-    height: 250px;
-    z-index: -1;
+.index-contenedor-fondo {
+  position: absolute;
+  top: 0;
+  left: 0;
+  width: 100%;
+  height: 250px;
+  z-index: -1;
+}
 
-  }
-  
-  .index-contenedor-fondo img {
-    width: 100%;
-    height: 100%;
-    object-fit: cover;
-  }
-  
-  #index-formulario-busqueda {
-    display: flex;
-    width: 50%;
-    margin-top: 20px;
-    margin-bottom: 40px;
-    gap: 5px;
-    input{
-      width: 80%;
-      height: 40px;
-      border-radius: 15px;
-      text-align: center;
-    }
-    
-  }
-  
-  h1, h3, #index-formulario-busqueda {
-    margin: 5px 0; /* Añadir un pequeño espacio entre los elementos */
-  }
+.index-contenedor-fondo img {
+  width: 100%;
+  height: 100%;
+  object-fit: cover;
+}
 
-#index-contenedor-resultados{
-  background-color: var(--color-naranja-dorado);  
+h3,
+#index-formulario-busqueda {
+  margin: 5px 0; /* Añadir un pequeño espacio entre los elementos */
+}
+
+#index-contenedor-resultados {
+  background-color: var(--color-naranja-dorado);
   display: grid;
-  grid-template-columns: repeat(auto-fit, minmax(200px,1fr));
+  grid-template-columns: repeat(auto-fit, minmax(200px, 1fr));
   /* gap: 5px; */
-    
 }
 
-.index-punto{
+.index-punto {
   display: flex;
   flex-direction: column;
   align-items: center;
-  background-color: var(--color-naranja-oscuro);  
+  background-color: var(--color-naranja-oscuro);
   margin-top: 10px;
   margin-bottom: 15px;
   padding: 5px;
   margin-left: 5px;
-  margin-right: 5px; 
+  margin-right: 5px;
   border-radius: 8px;
   box-shadow: 0 0 5px rgba(0, 0, 0, 0.5);
-  h3{
+  h3 {
     text-align: center;
   }
-  img{
+  img {
     width: 100%;
     max-height: 150px;
     max-width: 200px;
     object-fit: fill;
     border-radius: 8px;
     /* height: 25%; */
-    
   }
-  p{
+  p {
     text-align: justify;
   }
 }
