--- a/assets/css/restaurantes.css
+++ b/assets/css/restaurantes.css
@@ -1,3 +1,20 @@
+
+/* Estilos para pantallas grandes (mayores a 992px) */
+@media only screen and (min-width: 992px) {
+  /* Agrega tus estilos para pantallas grandes aquí */
+}
+
+/* Estilos para tabletas (entre 768px y 991px) */
+@media only screen and (min-width: 768px) and (max-width: 991px) {
+  /* Agrega tus estilos para tabletas aquí */
+}
+
+/* Estilos para celulares (menores a 767px) */
+@media only screen and (max-width: 767px) {
+  /* Agrega tus estilos para celulares aquí */
+}
+
+
 body {
   font-family: sans-serif;
   margin: 0;
